[gd_scene load_steps=3 format=3 uid="uid://baabjk2sesuiw"]

[ext_resource type="Texture2D" uid="uid://cii37ffppbca" path="res://Art/32x32_white_square.png" id="1_puwrh"]
[ext_resource type="Script" path="res://upgrade_option.gd" id="1_qeyeh"]

[node name="OptionButton" type="TextureButton"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(200, 70)
offset_right = 200.0
offset_bottom = 70.0
texture_normal = ExtResource("1_puwrh")
stretch_mode = 0
script = ExtResource("1_qeyeh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 200.0
offset_bottom = 10.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_puwrh")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "Name"
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "stat changes............................................................"
vertical_alignment = 1
autowrap_mode = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
